feat: more recipes

--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -8,6 +8,14 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/basted-eggs.html">Basted Eggs</a>
+    <ul>
+      <li><a href="recipes/basted-eggs.html">Basted Eggs</a></li>
+      <li>
+        <a href="recipes/macaroni-and-cheese.html"
+          >Simple Macaroni and Cheese</a
+        >
+      </li>
+      <li><a href="recipes/tortilla-pizza.html">Easy Tortilla Pizza</a></li>
+    </ul>
   </body>
 </html>
