--- a/odin-recipes/recipes/basted-eggs.html
+++ b/odin-recipes/recipes/basted-eggs.html
@@ -5,11 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Basted Eggs</title>
-    <style>
-      img {
-        width: 25%;
-      }
-    </style>
+    <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
     <h1>Basted Eggs</h1>
