feat: main page background

--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -8,14 +8,17 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Odin Recipes</h1>
+    <div class="odinHeading">
+      <div><h1>Odin Recipes</h1></div>
+    </div>
+
     <ul>
-      <li><a href="recipes/basted-eggs.html">Basted Eggs</a></li>
-      <li>
+      <li class="box"><a href="recipes/basted-eggs.html">Basted Eggs</a></li>
+      <li class="box">
         <a href="recipes/macaroni-and-cheese.html"
           >Simple Macaroni and Cheese</a
         >
-      </li>
+      </li class="box">
       <li><a href="recipes/tortilla-pizza.html">Easy Tortilla Pizza</a></li>
     </ul>
   </body>
