feat: main page structure

--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -8,18 +8,33 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="odinHeading">
-      <div><h1>Odin Recipes</h1></div>
+    <div class="heading-container">
+      </div>
+      <div class="odinHeading">
+        <div><h1>Odin Recipes</h1></div>
+      </div>
     </div>
 
-    <ul>
+    <ul class="flex-container">
       <li class="box"><a href="recipes/basted-eggs.html">Basted Eggs</a></li>
       <li class="box">
         <a href="recipes/macaroni-and-cheese.html"
           >Simple Macaroni and Cheese</a
         >
-      </li class="box">
-      <li><a href="recipes/tortilla-pizza.html">Easy Tortilla Pizza</a></li>
+      </li>
+      <li class="box">
+        <a href="recipes/tortilla-pizza.html">Easy Tortilla Pizza</a>
+      </li>
+
+      <li class="box"><a href="recipes/basted-eggs.html">Basted Eggs</a></li>
+      <li class="box">
+        <a href="recipes/macaroni-and-cheese.html"
+          >Simple Macaroni and Cheese</a
+        >
+      </li>
+      <li class="box">
+        <a href="recipes/tortilla-pizza.html">Easy Tortilla Pizza</a>
+      </li>
     </ul>
   </body>
 </html>
