feat: gif animation

--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -9,6 +9,25 @@
   </head>
   <body>
     <div class="heading-container">
+      <div class="odinHeading">
+        <iframe
+          src="https://giphy.com/embed/K4x1ZL36xWCf6"
+          width="400"
+          height="200"
+          frameborder="0"
+          class="giphy-embed"
+          allowfullscreen
+          style="border-radius: 50px"
+        ></iframe>
+        <!-- <p>
+          <a
+            href="https://giphy.com/gifs/eating-spongebob-squarepants-patrick-K4x1ZL36xWCf6"
+            >via GIPHY</a
+          >
+        </p> -->
+      </div>
+      <div class="odinHeading">
+        <div><h1>Odin Recipes</h1></div>
       </div>
       <div class="odinHeading">
         <div><h1>Odin Recipes</h1></div>
