--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -4,10 +4,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Landing Page</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>This website is awesome</h1>
+    <header>
+      <nav>
+        <p class="navLogo">Header Logo</p>
+        <ul>
+          <li>header link one</li>
+          <li>header link two</li>
+          <li>header link three</li>
+        </ul>
+      </nav>
+      <!-- <h1>This website is awesome</h1> -->
+    </header>
   </body>
 </html>
