--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -23,7 +23,19 @@
           <li>header link three</li>
         </ul>
       </nav>
-      <!-- <h1>This website is awesome</h1> -->
+      <section class="headerSection">
+        <div class="section-one">
+          <h1>This website is awesome</h1>
+          <p>
+            This website has some subtext that goest here under the main title.
+            It's a smaller font and color is lower </br> contrast
+          </p>
+          <div class="button">Sign up</div>
+        </div>
+        <div class="section-two">
+          <p>this is a placeholder for an image</p>
+        </div>
+      </section>
     </header>
   </body>
 </html>
