feat: main section

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -18,15 +18,15 @@
       <nav>
         <p class="navLogo">Header Logo</p>
         <ul>
-          <li>header link one</li>
-          <li>header link two</li>
-          <li>header link three</li>
+          <li><p>header link one</p></li>
+          <li><p>header link one</p></li>
+          <li><p>header link one</p></li>
         </ul>
       </nav>
       <section class="headerSection">
         <div class="section-one">
           <h1>This website is awesome</h1>
-          <p>
+          <p class="sect-one-text">
             This website has some subtext that goest here under the main title.
             It's a smaller font and color is lower </br> contrast
           </p>
@@ -37,5 +37,28 @@
         </div>
       </section>
     </header>
+
+    <main>
+      <h2>Some random information.</h2>
+      <div class="border-box-line">
+        <div>
+          <div class="border-box"></div>
+          <p class="box-text">this is some subtext under an illustration or image</p>
+        </div>
+        <div>
+          <div class="border-box"></div>
+          <p class="box-text">this is some subtext under an illustration or image</p>
+        </div>
+        <div>
+          <div class="border-box"></div>
+          <p class="box-text">this is some subtext under an illustration or image</p>
+        </div>
+        <div>
+          <div class="border-box"></div>
+          <p class="box-text">this is some subtext under an illustration or image</p>
+        </div>
+      </div>
+      
+    </main>
   </body>
 </html>
