--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,300&display=swap"
       rel="stylesheet"
     />
     <title>Landing Page</title>
@@ -28,7 +28,8 @@
           <h1>This website is awesome</h1>
           <p class="sect-one-text">
             This website has some subtext that goest here under the main title.
-            It's a smaller font and color is lower </br> contrast
+            It's a smaller font and color is lower <br />
+            contrast
           </p>
           <div class="button">Sign up</div>
         </div>
@@ -43,22 +44,40 @@
       <div class="border-box-line">
         <div>
           <div class="border-box"></div>
-          <p class="box-text">this is some subtext under an illustration or image</p>
+          <p class="box-text">
+            this is some subtext under an illustration or image
+          </p>
         </div>
         <div>
           <div class="border-box"></div>
-          <p class="box-text">this is some subtext under an illustration or image</p>
+          <p class="box-text">
+            this is some subtext under an illustration or image
+          </p>
         </div>
         <div>
           <div class="border-box"></div>
-          <p class="box-text">this is some subtext under an illustration or image</p>
+          <p class="box-text">
+            this is some subtext under an illustration or image
+          </p>
         </div>
         <div>
           <div class="border-box"></div>
-          <p class="box-text">this is some subtext under an illustration or image</p>
+          <p class="box-text">
+            this is some subtext under an illustration or image
+          </p>
         </div>
       </div>
-      
     </main>
+
+    <section class="quote-section">
+      <div class="quote">
+        <h3>
+          This is an inspiring quote, or a testimonial from a customer. Maybe
+          it's just a filling up space, or maybe people will actually read it.
+          Who knows? All I know is that it looks nice.
+        </h3>
+        <p class="author">-Thor, God of Thunder</p>
+      </div>
+    </section>
   </body>
 </html>
