feat: banner section

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -80,4 +80,16 @@
       </div>
     </section>
   </body>
+
+  <section class="banner-section">
+    <div class="banner-box">
+      <div class="banner-left">
+        <p class="line-one">Call to action! It's time!</p>
+        <p class="line-two">
+          Sign up for our product by clicking that button right over there!
+        </p>
+      </div>
+      <div class="banner-right"><p class="sign-up-btn">Sign up</p></div>
+    </div>
+  </section>
 </html>
