--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -92,4 +92,8 @@
       <div class="banner-right"><p class="sign-up-btn">Sign up</p></div>
     </div>
   </section>
+
+  <footer>
+    <p>Copyright &copy; The Odin Project 2021</p>
+  </footer>
 </html>
