--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -8,6 +8,11 @@
   </head>
   <body>
     <h1>Project: Rock Paper Scissors</h1>
+    <div>
+      <button>rock</button>
+      <button>paper</button>
+      <button>scissors</button>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
