--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -9,6 +9,11 @@
   <body>
     <h1>Project: Rock Paper Scissors</h1>
     <div>
+      <h2>Player: <span id="player-choise"></span></h2>
+      <h2>Computer: <span id="computer-choise"></span></h2>
+      <h2>Result: <span id="result"></span></h2>
+    </div>
+    <div>
       <button>rock</button>
       <button>paper</button>
       <button>scissors</button>
