--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -7,17 +7,22 @@
     <title>Rock Paper Scissors</title>
   </head>
   <body>
-    <h1>Project: Rock Paper Scissors</h1>
+    <h1>Project: Rock Paper Scissors. Score Five Wins!</h1>
     <div>
       <h2>Player: <span id="player-choise"></span></h2>
       <h2>Computer: <span id="computer-choise"></span></h2>
       <h2>Result: <span id="result"></span></h2>
+      <h2>
+        Score: player wins( <span id="playerScore"></span> ) computer wins (
+        <span id="computerScore"></span> )
+      </h2>
     </div>
     <div>
       <button>rock</button>
       <button>paper</button>
       <button>scissors</button>
     </div>
+    <h1>Winner: <span id="winner"></span></h1>
     <script src="script.js"></script>
   </body>
 </html>
